TestCases/Errors/MortaltyRates/TestCase/run.bat
..\..\..\..\Build\windows\spm -r -q -g 0 -d -c config-1.spm > Expected-1.log
..\..\..\..\Build\windows\spm -r -q -g 0 -d -c config-2.spm > Expected-2.log

